...
                    Button(action: {
                        showRandomGame = true
                    }, label: {
                        Label("Random Game", systemImage: "die.face.6")
                    })
                    .tint(.accentColor)
                    .accessibilityIdentifier("randomGamePickerButton")
                })
#endif
                if UIDevice.current.userInterfaceIdiom == .phone { // iPad will always show the localQuickReferenceButton
                    ToolbarItem(placement: .topBarTrailing, content: {
                        Button(action: handleQuickReferenceTap, label: {
                            Label("Quick Reference", systemImage: "rectangle.portrait.on.rectangle.portrait.angled")
                        })
                        .tint(.accentColor)
                        .accessibilityIdentifier("globalQuickReferenceButton")
#if !os(iOS)
                        .disabled(openWindows.contains("quick-reference"))
#endif
                    })
                }
            }
...
