...
                            .padding()
                            .frame(maxWidth: .infinity)
                            .foregroundColor(.white)
                            .cornerRadius(12)
                    }
                    .buttonStyle(.borderedProminent)
                    .accessibilityIdentifier("playRandomGameButton")
#if os(iOS)
                    .tint(.accentColor)
#endif
                }
                
                Button(action: pickRandom) {
...
#endif
                        .font(.title3)
                        .padding()
                        .frame(maxWidth: .infinity)
                        .cornerRadius(12)
                }
                .accessibilityIdentifier("pickRandomGameButton")
                .buttonStyle(.bordered)
                .disabled(isAnimating)
            }
            .padding()
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing, content: {
...
