...
        .navigationTitle(game.name)
        .toolbar {
            ToolbarItem(placement: .topBarTrailing, content: {
                Button(action: handleQuickReferenceTap, label: {
                    Label("Quick Reference", systemImage: "rectangle.portrait.on.rectangle.portrait.angled")
                })
                .accessibilityIdentifier("localQuickReferenceButton")
#if !os(iOS)
                .disabled(openWindows.contains("quick-reference"))
#endif
            })
        }
        .gradientBackground(color: .accentColor)
...
                            .background(.primary) // Needed to give button accent color on iOS
#else
                            .backgroundStyle(.primary)
#endif
                            .cornerRadius(20)
                    }
                    .accessibilityIdentifier("showDeferredStepsButton")
                }
                .horizontallyCentered()
                .padding(.all)
                .aspectRatio(contentMode: .fill)
                .background(
                    RoundedRectangle(cornerRadius: 4, style: .continuous)
...
