...
    case one_pair = 1
    case high_card = 0
    
    var name: String {
        switch self {
        case .royal_flush:
            return "Royal Flush"
        case .straight_flush:
            return "Straight Flush"
        case .four_of_a_kind:
            return "Four Of A Kind"
        case .full_house:
            return "Full House"
        case .flush:
            return "Flush"
...
